tests/valid_inputs/logical_or_shortcircuit.cpp

int main() {
	int *p = nullptr, i = 42;
	if(i || *p)
		return 42;
}
