tests/invalid_inputs/parsing/paren_init_ptr.cpp

int main() {
	int *p(nullptr);	// should not work
}
